@@ -330,6 +330,12 @@ void gui_simple_message_to_user_show_message_with_name ( gui_simple_message_to_u
         utf8stringbuf_append_str( (*this_).private_temp_str, "Exporting files ...\n" );
         utf8stringbuf_append_str( (*this_).private_temp_str, name );
     }
+    else if ( content_id == GUI_SIMPLE_MESSAGE_CONTENT_DB_FILE_WRITTEN )
+    {
+        U8_LOG_EVENT( "GUI_SIMPLE_MESSAGE_CONTENT_DB_FILE_WRITTEN" );
+        utf8stringbuf_append_str( (*this_).private_temp_str, "Database file written: " );
+        utf8stringbuf_append_str( (*this_).private_temp_str, name );
+    }
     else
     {
         U8_LOG_ERROR("unexptected content_id");
