@@ -27,7 +27,7 @@ static inline ctrl_controller_t *io_data_file_get_controller_ptr ( io_data_file_
     return &((*this_).controller);
 }
 
-static inline const char *io_data_file_get_filename_ptr ( io_data_file_t *this_ )
+static inline const char *io_data_file_get_filename_const ( const io_data_file_t *this_ )
 {
     return utf8stringbuf_get_string( (*this_).data_file_name );
 }
